@@ -9,4 +9,4 @@ t/00-load.t
 t/01-multinode.t
 t/98-pod-coverage.t
 t/99-pod.t
-
+META.yml
