@@ -1,6 +1,15 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.35
-use Module::Build::Compat 0.02;
-    
-Module::Build::Compat->run_build_pl(args => \@ARGV);
-require Module::Build;
-Module::Build::Compat->write_makefile(build_class => 'Module::Build');
+use ExtUtils::MakeMaker;
+WriteMakefile
+(
+          'NAME' => 'Tree::MultiNode',
+          'VERSION_FROM' => 'lib/Tree/MultiNode.pm',
+          'PREREQ_PM' => {
+                           'Module::Build' => '0.35',
+                           'Test::More' => '0.40'
+                         },
+          'INSTALLDIRS' => 'site',
+          'EXE_FILES' => [],
+          'PL_FILES' => {}
+        )
+;
