@@ -1,7 +1,9 @@
 Revision history for Perl extension Tree::MultiNode.
 
 1.0.11 
-  TODDR - Convert module to standart treee layout.
+  - Convert module to standart treee layout.
+  - Convert to Test::More suite with additional tests
+  - Generat META.yml file from new Build.PL data
 
 1.0.10 Tue May 27 14:06:33 EDT 2003
   KRB: Markus Maier <maier.m@web.de> found a bug in the tree's destructor
